@@ -4,19 +4,19 @@
 
 CDSS Common Java Library
 CDSS Common Java Library is a part of Colorado's Decision Support Systems (CDSS)
-Copyright (C) 1994-2023 Colorado Department of Natural Resources
+Copyright (C) 1994-2025 Colorado Department of Natural Resources
 
 CDSS Common Java Library is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
-    CDSS Common Java Library is distributed in the hope that it will be useful,
+CDSS Common Java Library is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
+You should have received a copy of the GNU General Public License
     along with CDSS Common Java Library.  If not, see <https://www.gnu.org/licenses/>.
 
 NoticeEnd */
@@ -177,11 +177,11 @@ public TSUtil_NewStatisticYearTS ( TS ts, String newTSID, TSStatisticType statis
     setStatisticType ( statisticType );
     setValue1 ( value1 );
     if ( allowMissingCount == null ) {
-        allowMissingCount = new Integer(-1); // Default.
+        allowMissingCount = Integer.valueOf(-1); // Default.
     }
     setAllowMissingCount ( allowMissingCount.intValue() );
     if ( minimumSampleSize == null ) {
-        minimumSampleSize = new Integer(-1); // Default.
+        minimumSampleSize = Integer.valueOf(-1); // Default.
     }
     setMinimumSampleSize ( minimumSampleSize );
 
