@@ -4,37 +4,22 @@
 
 CDSS Common Java Library
 CDSS Common Java Library is a part of Colorado's Decision Support Systems (CDSS)
-Copyright (C) 1994-2019 Colorado Department of Natural Resources
+Copyright (C) 1994-2025 Colorado Department of Natural Resources
 
 CDSS Common Java Library is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
-    CDSS Common Java Library is distributed in the hope that it will be useful,
+CDSS Common Java Library is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
+You should have received a copy of the GNU General Public License
     along with CDSS Common Java Library.  If not, see <https://www.gnu.org/licenses/>.
 
 NoticeEnd */
-
-//-----------------------------------------------------------------------------
-// DragAndDropTransferPrimitive - A class for holding primitive data for easy 
-//	transfer between drag and drop components.
-//-----------------------------------------------------------------------------
-// Copyright: See the COPYRIGHT file.
-//-----------------------------------------------------------------------------
-// History: 
-// 2004-02-26	J. Thomas Sapienza, RTi	Initial version.
-// 2004-03-04	JTS, RTi		Updated Javadocs in response to 
-//					numerous changes.
-// 2004-04-27	JTS, RTi		* Revised after SAM's review.
-//					* Renamed from DragAndDropPrimitive to
-//					  DragAndDropTransferPrimitive.
-//-----------------------------------------------------------------------------
 
 package RTi.Util.GUI;
 
@@ -48,10 +33,9 @@ import RTi.Util.Message.Message;
 
 /**
 This class provides a wrapper for transferring primitive data types (boolean,
-double, float, int and String) between drag and drop components.  It can be 
-used for transferring simple data.  More complex objects can be transferred by:
-making the class extend Serializable and Transferable and filling in the 
-required method bodies.
+double, float, int and String) between drag and drop components.
+It can be used for transferring simple data.  More complex objects can be transferred by:
+making the class extend Serializable and Transferable and filling in the required method bodies.
 */
 @SuppressWarnings("serial")
 public class DragAndDropTransferPrimitive
@@ -65,7 +49,7 @@ private final String __CLASS = "DragAndDropTransferPrimitive";
 /**
 Used to refer to the types of data that can be stored in this class.
 */
-public final static int 
+public final static int
 	TYPE_BOOLEAN = 0,
 	TYPE_DOUBLE = 1,
 	TYPE_FLOAT = 2,
@@ -80,32 +64,30 @@ private boolean __b;
 /**
 Flavor for local transfer of boolean data.
 */
-public static final DataFlavor booleanFlavor = 
+public static final DataFlavor booleanFlavor =
 	new DataFlavor(DragAndDropTransferPrimitive.class, "Boolean");
 
 /**
 Flavor for local transfer of double data.
 */
-public static final DataFlavor doubleFlavor = 
+public static final DataFlavor doubleFlavor =
 	new DataFlavor(DragAndDropTransferPrimitive.class, "Double");
 
 /**
 Flavor for local transfer of float data.
 */
-public static final DataFlavor floatFlavor = 
+public static final DataFlavor floatFlavor =
 	new DataFlavor(DragAndDropTransferPrimitive.class, "Float");
 
 /**
 Flavor for local transfer of int data.
 */
-public static final DataFlavor intFlavor = 
-	new DataFlavor(DragAndDropTransferPrimitive.class, "Integer");
+public static final DataFlavor intFlavor = new DataFlavor(DragAndDropTransferPrimitive.class, "Integer");
 
 /**
 Flavor for local transfer of string data.
 */
-public static final DataFlavor stringFlavor = 
-	new DataFlavor(DragAndDropTransferPrimitive.class, "String");
+public static final DataFlavor stringFlavor = new DataFlavor(DragAndDropTransferPrimitive.class, "String");
 
 /**
 Flavor for simple plain text transfer, including text transfer into
@@ -217,8 +199,7 @@ public DragAndDropTransferPrimitive(int i) {
 }
 
 /**
-Constructor for object to hold String data.  Null strings are turned into
-empty strings.
+Constructor for object to hold String data.  Null strings are turned into empty strings.
 @param s String data to transfer.
 */
 public DragAndDropTransferPrimitive(String s) {
@@ -232,34 +213,25 @@ public DragAndDropTransferPrimitive(String s) {
 }
 
 /**
-Cleans up member variables.
-*/
-public void finalize()
-throws Throwable {
-	__s = null;
-	super.finalize();
-}
-
-/**
 Returns the data stored in this object.
 @return the data stored in this object.
 */
 public Object getData() {
 	switch (__type) {
 		case TYPE_BOOLEAN:
-			return new Boolean(__b);
+			return Boolean.valueOf(__b);
 		case TYPE_DOUBLE:
-			return new Double(__d);
+			return Double.valueOf(__d);
 		case TYPE_FLOAT:
-			return new Float(__f);
+			return Float.valueOf(__f);
 		case TYPE_INT:
-			return new Integer(__i);
+			return Integer.valueOf(__i);
 		case TYPE_STRING:
 			return __s;
 	}
-	// will never happen, just required for the compiler:
-	return null;	
-}	
+	// Will never happen, just required for the compiler.
+	return null;
+}
 
 /**
 Returns the type of data stored in this object.
@@ -275,7 +247,7 @@ Returns the data to be transferred using the specified flavor.
 @return the data to be transferred using the specified flavor.
 @throws UnsupportedFlavorException if the flavor is not supported.
 */
-public Object getTransferData(DataFlavor flavor) 
+public Object getTransferData(DataFlavor flavor)
 throws UnsupportedFlavorException {
 	if (!isDataFlavorSupported(flavor)) {
 		throw new UnsupportedFlavorException(flavor);
@@ -283,15 +255,13 @@ throws UnsupportedFlavorException {
 
 	DataFlavor[] flavors = getTransferDataFlavors();
 
-	// check to see if it's a local copy of a data object or a serializable
-	// object.  Either way, return the current object.  For local data 
-	// it will be returned as normal, otherwise the JVM takes care of
-	// serializing it.
+	// check to see if it's a local copy of a data object or a serializable object.
+	// Either way, return the current object.  For local data it will be returned as normal,
+	// otherwise the JVM takes care of serializing it.
 	if (flavor.equals(flavors[0])) {
 		return this;
 	}
-	// just a plain text return.  Convert the value to a String and
-	// return it.
+	// just a plain text return.  Convert the value to a String and return it.
 	else {
 		String s = null;
 		switch (__type) {
@@ -303,7 +273,7 @@ throws UnsupportedFlavorException {
 				s = "" + __f;
 			case TYPE_INT:
 				s = "" + __i;
-			case TYPE_STRING:	
+			case TYPE_STRING:
 				s = __s;
 		}
 		try {
@@ -318,21 +288,17 @@ throws UnsupportedFlavorException {
 }
 
 /**
-Returns the array of data flavors in which the current object can be 
-transferred.
-@return the array of data flavors in which the current object can be
-transferred.
+Returns the array of data flavors in which the current object can be transferred.
+@return the array of data flavors in which the current object can be transferred.
 */
 public DataFlavor[] getTransferDataFlavors() {
 	return getTransferDataFlavors(__type);
 }
 
 /**
-Returns the array of data flavors in which an object of the specified type can
-be transferred.
+Returns the array of data flavors in which an object of the specified type can be transferred.
 @param type the type of data for which to return the data flavors.
-@return the array of data flavors in which an object of the specified type can
-be transferred.
+@return the array of data flavors in which an object of the specified type can be transferred.
 */
 public static DataFlavor[] getTransferDataFlavors(int type) {
 	DataFlavor[] flavors = new DataFlavor[2];
@@ -354,7 +320,7 @@ public static DataFlavor[] getTransferDataFlavors(int type) {
 			break;
 	}
 	flavors[1] = textFlavor;
-	return flavors;	
+	return flavors;
 }
 
 /**
@@ -363,7 +329,7 @@ Checks to see if a certain data flavor is supported by this class.
 @return true if the flavor is supported, false if not.
 */
 public boolean isDataFlavorSupported(DataFlavor flavor) {
-	DataFlavor[] flavors = getTransferDataFlavors();	
+	DataFlavor[] flavors = getTransferDataFlavors();
 	for (int i = 0; i < flavors.length; i++) {
 		if (flavors[i].equals(flavor)) {
 			return true;
