@@ -4,19 +4,19 @@
 
 CDSS Common Java Library
 CDSS Common Java Library is a part of Colorado's Decision Support Systems (CDSS)
-Copyright (C) 1994-2022 Colorado Department of Natural Resources
+Copyright (C) 1994-2025 Colorado Department of Natural Resources
 
 CDSS Common Java Library is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
-    CDSS Common Java Library is distributed in the hope that it will be useful,
+CDSS Common Java Library is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
+You should have received a copy of the GNU General Public License
     along with CDSS Common Java Library.  If not, see <https://www.gnu.org/licenses/>.
 
 NoticeEnd */
@@ -32,13 +32,14 @@ import javax.swing.table.AbstractTableModel;
 // and allow a constructor with no data since that may be managed in a child class.
 
 /**
-This is the class from which all the classes that will be used as 
-TableModels in a JWorksheet should be used.  It implements a few core 
-data members that all those classes should have, including some sorting support. 
 <p>
-TODO (JTS - 2006-05-25) If I could do this over, I would combine this table model with 
-AbstractRowTableModel, in order to simplify things.  I don't see a very 
-good reason to require both of these, honestly.
+This is the class from which all the classes that will be used as TableModels in a JWorksheet should be used.
+It implements a few core data members that all those classes should have, including some sorting support.
+</p>
+<p>
+TODO (JTS - 2006-05-25) If I could do this over, I would combine this table model with AbstractRowTableModel,
+in order to simplify things.  I don't see a very good reason to require both of these, honestly.
+</p>
 */
 @SuppressWarnings("serial")
 public abstract class JWorksheet_AbstractTableModel<T> extends AbstractTableModel {
@@ -59,20 +60,18 @@ The type of format in which the columns should be displayed.
 protected int _type = -1;
 
 /**
-The worksheet that this table model works with.  This is here so that it 
-can be set by derived classes.  This class provides a built-in List<T> data array
-that allows basic table model interaction, such as interacting with rows.
-If a List<T> is not appropriate for the data model, then manage the data
-in the child class and provide appropriate methods.
+The worksheet that this table model works with.  This is here so that it can be set by derived classes.
+This class provides a built-in List<T> data array that allows basic table model interaction, such as interacting with rows.
+If a List<T> is not appropriate for the data model, then manage the data in the child class and provide appropriate methods.
 TODO (JTS - 2004-11-30) remove?  subclasses may be using this ...
-TODO (JTS - 2005-03-30) no, leave in, and have it called automatically by the worksheet whenever a model
-is set in it.  add a setWorksheet() method.
+TODO (JTS - 2005-03-30) no, leave in, and have it called automatically by the worksheet whenever a model is set in it.
+add a setWorksheet() method.
 */
 protected JWorksheet _worksheet;
 
 /**
-List of integer arrays denoting the cells whose default editability has
-been overridden.  The int[] arrays consist of:<br><pre>
+List of integer arrays denoting the cells whose default editability has been overridden.
+The int[] arrays consist of:<br><pre>
 0 - the row of the cell
 1 - the column of the cell
 2 - a 1 if the cell is editable, 0 if it is not
@@ -134,13 +133,13 @@ public void clearOverrideCellEdit(int row) {
 		for (int i = 0; i < size; i++) {
 			temp = (int[])_cellEditOverride.get(i);
 			if (temp[0] == row) {
-				removes.add(new Integer(i));
+				removes.add(Integer.valueOf(i));
 			}
 		}
 	}
-	
+
 	size = removes.size();
-	for (int i = (size - 1); i >= 0; i--) { 
+	for (int i = (size - 1); i >= 0; i--) {
 		_cellEditOverride.remove(row);
 	}
 }
@@ -171,13 +170,19 @@ public String[] getColumnToolTips() {
 }
 
 /**
-Used for reading consecutive values from table models in which the values of 
-one row depend on the values of the rows before them (e.g., Time Series dates
-or running averages).  When a consecutive read is made, the table model is 
-guaranteed that the previous row that was operated on was either the current
-row (the column could be different) or the previous row.<p>
-The default implementation of this method simply pipes through the call to getValueAt(row, column).<p>
+<p>
+Used for reading consecutive values from table models in which the values of
+one row depend on the values of the rows before them
+(e.g., Time Series dates or running averages).
+When a consecutive read is made, the table model is guaranteed that the previous row that
+was operated on was either the current row (the column could be different) or the previous row.
+</p>
+<p>
+The default implementation of this method simply pipes through the call to getValueAt(row, column).
+</p>
+<p>
 <b>Note:</b> if a class overrides this method, it should also override startNewConsecutiveRead().
+</p>
 @param row the row from which to read data
 @param column the column from which to read data
 @return the data read from the given row and column.
@@ -218,16 +223,15 @@ public void insertRowAt(T o, int pos) {
 }
 
 /**
-Return the sort order array.  If the data in the table have been sorted, this array
-is needed to access to original data in the proper order.
+Return the sort order array.
+If the data in the table have been sorted, this array is needed to access to original data in the proper order.
 */
-public int [] getSortOrder ()
-{
+public int [] getSortOrder () {
     return _sortOrder;
 }
 
 /**
-Overrides the default cell editability of the specified cell and sets the 
+Overrides the default cell editability of the specified cell and sets the
 cell to be editable or not depending on the value of state.
 @param row row of the cell
 @param column column of the cell
@@ -303,9 +307,9 @@ public void setRowData(T o, int pos) {
 
 /**
 Sets the sorted order for the records to be displayed in.  This method is in
-this base class for all the table models used in a JWorksheet so that the 
+this base class for all the table models used in a JWorksheet so that the
 base JWorksheet can be sure that all of its models will have this method.
-@param sortOrder the sorted order in which records should be displayed.  
+@param sortOrder the sorted order in which records should be displayed.
 The record that would normally go at position X will now be placed at position 'sortOrder[x]'
 */
 public void setSortedOrder(int[] sortOrder) {
@@ -336,20 +340,19 @@ public void shouldResetGetConsecutiveValueAt(boolean should) {
 }
 
 /**
-Used to notify the table model of a new consecutive row read.  Consecutive reads
-might be used in places where the values of a row depend on the values of the
-previous rows (e.g., Time Series dates, running averages).  In a consecutive
-read, the table model is guaranteed that the row in the call to
-getValueAt() is either the same row that was read from last, or one greater
-than the row that was read from last time.
+Used to notify the table model of a new consecutive row read.
+Consecutive reads might be used in places where the values of a row depend on the values of the previous rows
+(e.g., Time Series dates, running averages).
+In a consecutive read, the table model is guaranteed that the row in the call to getValueAt()
+is either the same row that was read from last, or one greater than the row that was read from last time.
 */
 public void startNewConsecutiveRead() {
 }
 
 /**
-Can be called upon changing values in a table model.  Notifies all
-JWorksheet_TableModelListener listeners
-of the change.  Will not be called automatically by the table model.
+Can be called upon changing values in a table model.
+Notifies all JWorksheet_TableModelListener listeners of the change.
+Will not be called automatically by the table model.
 @param row the row (0+) of the changed value
 @param col the col (0+) of the changed value
 @param value the new value for the cell indicated by row and column.
